会员中心初步完成

--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -5,6 +5,7 @@ body { background: #f1f0f6;}
 .h100pc { height: 100%; }
 .w100pc { width: 100%; }
 .dsn { display: none; }
+.dsib { display: inline-block; }
 .fixed { position: fixed; }
 .rel { position: relative; }
 .abs { position: absolute; }
